download resume button repositioned and verification page changed

--- a/_includes/resume/adobe_viewer.html
+++ b/_includes/resume/adobe_viewer.html
@@ -33,7 +33,7 @@
           </button>
         </div>
         <div class="resume-modal-body">
-          <p>Please provide your details to download the resume.</p>
+          <p>I welcome connections from those interested in learning more about me. Feel free to share your contact details, or if you prefer, you can simply download the PDF.</p>
           <form id="resume-download-form">
             <div class="resume-form-group">
               <div class="resume-form-row">
